src/css/style.css
:root {
    --primary-color: #005dd7;
}

@font-face {
    font-family: "Roboto";
    src: url(/src/assets/Roboto-Light.ttf);
}
@font-face {
    font-family: "Montserrat";
    src: url(/src/assets/Montserrat-Light.ttf);
}
@font-face {
    font-family: "LeagueSpartan";
    src: url(/src/assets/LeagueSpartan-Regular.ttf);
}

html {
    font-size: 62.5%;
    box-sizing: content-box;
    scroll-behavior: smooth;
}

body {
    font-size: 1.4rem;
    font-family: "Montserrat", sans-serif;
}

* {
    padding: 0;
    margin: 0;
}

ul {
    list-style: none;
}

img {
    max-width: 100%;
}

a {
    text-decoration: none;
}

h2 {
    text-transform: uppercase;
    color: var(--primary-color);
    font-weight: 900;
    margin: 1em auto;
}

.container {
    width: 89%;
    margin: auto;
}

#header-content {
    margin-bottom: 1em;
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    justify-content: space-around;
    width: 100%;
}

#logo {
    font-family: "LeagueSpartan", sans-serif;
    color: initial;
    font-weight: bold;
}

#logo_wrapper {
    display: flex;
    align-items: center;
}

.nav-list {
    position: absolute;
    width: 100%;
    height: 100%;
    background: #fff;
    left: -100%;
    top: 0;
    transition: .4s;
    padding-top: 1em;
}

.nav-list.active {
    left: 0;
}

.nav-item {
    padding: .5em 1em;
}

.nav-link {
    font-size: 1.3rem;
    color: #000;
    font-weight: 900;
}

#menu_toggler {
    text-align: center;
    width: fit-content;
}

#close_wrapper {
    position: absolute;
    top: 0;
    right: 15px;
}

#close {
    font-size: 3rem;
    font-weight: bolder;
    display: inline-block;
}

#menu_toggler span {
    width: 100%;
    display: block;
    font-size: 4rem;
}

#intro {
    display: flex;
    flex-flow: column-reverse;
    align-items: center;
    justify-content: space-around;
}

#img-blob {
    background-color: #005dd7;
    height: 200px;
    width: 250px;
    overflow: hidden;
    animation: shapeShift 10s 0s ease infinite;
    box-shadow: 0 10px 20px 2px #005dd797;
    margin-bottom: 2em;
}

#img-blob img {
    margin: auto;
    margin-top: -3em;
}

h1 {
    font-weight: 600;
    color: #303030;
    margin-bottom: 1em;
}

h1>strong {
    font-weight: 1500;
    color: #000;
}

h1> span {
    color: var(--primary-color);
    text-transform: capitalize;
}

/* Background */

#background {
    display: flex;
    flex-flow: column-reverse;
}

#background > img {
    border-radius: .9em;
}

#background-content {
    margin: 1em auto;
}

/* #background-content h2  */

/* Skills */

/* #skills h2  */

#skillsets {
    display: flex;
    flex-flow: row wrap;
    gap: 1em;
}

/* Projects */

#projects {
    margin: 1em auto;
}

/* #projects h2 */


.project {
    margin: 2em auto;
}

.project-img {
    margin-bottom: 2em;
}

.project-img > img {
    border-radius: 1.4rem;
}

.project-descrption h3 {
    margin-bottom: .5em;
}

/* .project-synopsis */

.technologies {
    display: flex;
    justify-content: left;
    align-items: center;
    flex-flow: row wrap;
    margin: 1em auto;
    gap: .3em;
}

.technology {
    color: var(--primary-color);
    font-size: smaller;
    border: 1px solid;
    padding: .3em;
    border-radius: .3rem;
    display: inline-block;
}

.demo-code {
    font-size: smaller;
    display: flex;
    justify-content: left;
    gap: .5em;
}

.demo-code a {
    display: inline-block;
    padding: .5em;
    margin-top: .3em;
    border-radius: .5rem;
    border: 1px solid var(--primary-color);
    color: var(--primary-color);
    font-weight: bold;
}

.demo {
    background-color: var(--primary-color);
    color: #fff !important;
}

/* Hire me */

/* #hire-me  */

.socials {
    display: flex;
    align-items: center;
    gap: 1em;
}

.socials a {
    color: var(--primary-color);
    font-weight: bolder;
}

.socials-wrapper {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    margin: 1em auto;
}

.resume {
    color: var(--primary-color);
    font-weight: bolder;
    text-decoration: underline;
}

/* Footer */

footer {
    padding: 1em;
}

footer h2 {
    font-size: 1.2rem;
    text-transform: unset;
    text-align: center;
}


/* Responsiveness */

@media screen and (min-width: 30rem) {

    #header-content {
        padding: 1em;
    }

    .nav-list {
        position: unset;
        display: flex;
        align-items: center;
        padding: unset;
    }

    #close, #menu_toggler {
        display: none;
    }

    #intro {
        flex-flow: row;
        min-height: 70vh;
    }

    #background {
        flex-flow: row;
        align-items: unset;
        gap: 2em;
    }

    #background > img {
        width:  50%;
    }

    #background-content {
        margin-top: -1.7em;
    }

    #projects-inner {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(30rem,1fr));
        gap: 2em;
    }

    .project {
        width: fit-content;
    }
    
    #background, #skills, #projects, #hire-me {
        padding: 2em 0em;
    }
}

@keyframes shapeShift {
    to,from  {
        border-top-right-radius: 90%;
        border-bottom-right-radius: 90%;
        border-bottom-left-radius: 80%;
        border-top-left-radius: 70%;
    }

    20% {
        border-top-right-radius: 90%;
        border-bottom-right-radius: 70%;
        border-bottom-left-radius: 90%;
        border-top-left-radius: 70%;
    }

    40% {
        border-top-right-radius: 70%;
        border-bottom-right-radius: 80%;
        border-bottom-left-radius: 70%;
        border-top-left-radius: 70%;
    }
}

